added test Unix test for wpf

--- a/03_CobtactAppWpf.Tests/03_CobtactAppWpf.Tests.csproj
+++ b/03_CobtactAppWpf.Tests/03_CobtactAppWpf.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <RootNamespace>_03_CobtactAppWpf.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -20,6 +20,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\03_CobtactAppWpf\03_CobtactAppWpf.csproj" />
   </ItemGroup>
 
 </Project>
